--- a/people.html
+++ b/people.html
@@ -32,12 +32,27 @@
         </div>
     </nav>
     <div class="container mt-4">
-        <h1>Speakers</h1>
+        <h1>Confirmed Speakers</h1>
         <div class="row">
             <div class="col-md-4">
-                <img src="resources/people/emma.jpg" alt="Speaker 1" class="img-fluid headshot">
+                <img src="resources/people/barbara.jpg" alt="Speaker 1" class="img-fluid headshot">
+                <h3>Barbara Engelhardt</h3>
+                <p>Professor, Stanford</p>
+            </div>
+            <div class="col-md-4">
+                <img src="resources/people/suchi.jpeg" alt="Speaker 2" class="img-fluid headshot">
+                <h3>Suchi Saria</h3>
+                <p>Associate Professor, Johns Hopkins</p>
+            </div>
+            <div class="col-md-4">
+                <img src="resources/people/jenna.jpg" alt="Speaker 3" class="img-fluid headshot">
+                <h3>Jenna Wiens</h3>
+                <p>Associate Professor, University of Michigan</p>
+            </div>
+            <div class="col-md-4">
+                <img src="resources/people/emma.jpg" alt="Speaker 4" class="img-fluid headshot">
                 <h3>Emma Pierson</h3>
-                <p>Assistant Professor at Cornell Tech</p>
+                <p>Assistant Professor, Cornell Tech</p>
             </div>
             <!-- <div class="col-md-4">
                 <img src="https://via.placeholder.com/150" alt="Speaker 2" class="img-fluid">
@@ -55,6 +70,11 @@
         <h1>Organizers</h1>
         <div class="row">
             <div class="col-md-4">
+                <img src="resources/people/aishwarya.png" alt="Speaker 3" class="headshot">
+                <h3>Aishwarya Mandyam</h3>
+                <p>PhD Student, Stanford</p>
+            </div>
+            <div class="col-md-4">
                 <img src="resources/people/Matt_Landers.jpg" alt="Speaker 1" class="headshot">
                 <h3>Matt Landers</h3>
                 <p>PhD Student, UVA</p>
@@ -62,14 +82,23 @@
             <div class="col-md-4">
                 <img src="resources/people/mike_merrill.jpeg" class="headshot">
                 <h3>Mike Merrill</h3>
-                <p>PhD Student, University of Washington.</p>
+                <p>PhD Student, University of Washington</p>
             </div>
             <div class="col-md-4">
-                <img src="resources/people/aishwarya.png" alt="Speaker 3" class="headshot">
-                <h3>Aishwarya Mandyam</h3>
-                <p>PhD Student, Stanford</p>
+                <img src="resources/people/taylor.jpg" class="headshot">
+                <h3>Taylor Killian</h3>
+                <p>Postdoctoral Researcher, Apple</p>
             </div>
-
+            <div class="col-md-4">
+                <img src="resources/people/sonali.jpg" class="headshot">
+                <h3>Sonali Parbhoo</h3>
+                <p>Assistant Professor, Imperial College London</p>
+            </div>
+            <div class="col-md-4">
+                <img src="resources/people/tom.jpg" class="headshot">
+                <h3>Tom Hartvigsen</h3>
+                <p>Assistant Professor, UVA</p>
+            </div>   
             </div>
         </div>
     </div>
