--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -32,7 +32,7 @@
     </nav>
     <div class="container mt-4">
         <h1>Call for Papers</h1>
-        <p>We invite submissions on a wide range of topics relevant to our field. Please submit your papers by the specified deadline.</p>
+        <p>Coming Soon! We anticipate an August 30th Deadline.</p>
     </div>
 </body>
 </html>
